# mona_robot

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_EN.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  scorecard.yml
configs/: clang-tidy.cfg  setup.cfg  uncrustify.cfg
docs/: 01 - Docker Environment Setup.md  01_SETUP.md  02 - ROS2 C++ Package & Node Basics.md  02_CPP_GUIDE.md  02_WORKFLOW.md  03_LIFECYCLE.md  03_SAFETY_AND_FDIR.md  04_WORKFLOW.md  05_NODES_AND_TOPICS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  REVIEW_REPORT_2026-05-04.md  TODO.md
docs/architecture/: mapping_and_odometry.md  networking_and_fleet.md  nodes_and_topics.md  safety_and_fdir.md
docs/en/: 01_SETUP.md  02_CPP_GUIDE.md  03_SAFETY_AND_FDIR.md  04_WORKFLOW.md  CONTRIBUTING.md
docs/guides/: cpp_guide.md  foxglove_guide.md  gamepad_setup.md  mapping_guide.md  teleoperation_guide.md  testing_guide.md
docs/ru/: 01_SETUP.md  02_CPP_GUIDE.md  04_WORKFLOW.md  CONTRIBUTING.md
scripts/: bringup_1_robot.bash  entrypoint.bash  format_code.bash  local_ci.bash  run_ci_checks.bash  run_sim.bash  start_1_robot.bash  start_fleet.bash  start_world.bash
src/mona_control/: CMakeLists.txt  package.xml
src/mona_control/include/mona_control/: twist_mux_node.hpp
src/mona_control/src/: twist_mux_node.cpp
src/mona_control/test/: test_lifecycle_instantiation.cpp  test_twist_mux_lifecycle.cpp  test_twist_mux_safety.cpp
src/mona_core/: CMakeLists.txt  package.xml
src/mona_core/configs/: ekf.yaml  fdir_policy.yaml  foxglove_dashboard.json  mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml  safety_params.yaml
src/mona_core/include/mona_core/: fdir_manager_node.hpp  safety_node.hpp
src/mona_core/launch/: bringup.launch.py  navigation.launch.py  robot.launch.py  slam.launch.py  teleop.launch.py  world.launch.py
src/mona_core/maps/: warehouse_map.pgm  warehouse_map.yaml
src/mona_core/scripts/: fdir_manager.py  lifecycle_manager.py
src/mona_core/src/: fdir_manager_node.cpp  mona_core_node.cpp  safety_node.cpp
src/mona_core/test/: test_ema_filter.cpp  test_fdir_manager.cpp  test_lifecycle_instantiation.cpp  test_routing_logic.cpp
src/mona_description/: CMakeLists.txt  package.xml
src/mona_description/launch/: bringup.launch.py  display.launch.py  sim_viz.launch.py  simulation.launch.py
src/mona_description/meshes/: base.FCStd  base.stl  led.FCStd  led.stl
src/mona_description/meshes/wheels/: mecanum_wheel.txt
src/mona_description/rviz/: mona.rviz
src/mona_description/urdf/: camera.xacro  imu.xacro  lidar.xacro  mona.urdf.xacro  wheel.xacro
src/mona_description/worlds/: mona.world  warehouse.sdf
src/mona_msgs/: CMakeLists.txt  package.xml
src/mona_msgs/msg/: FdirState.msg  SafetyDiagnostics.msg  SafetyState.msg  TwistMuxState.msg
src/mona_perception/: CMakeLists.txt  package.xml
src/mona_perception/include/mona_perception/: lidar_merger_node.hpp
src/mona_perception/launch/: perception.launch.py
src/mona_perception/src/: lidar_merger_node.cpp  main.cpp
src/mona_perception/test/: test_lidar_merger.cpp  test_lidar_merger_lifecycle.cpp  test_lifecycle_instantiation.cpp
src/mona_safety/: CMakeLists.txt  package.xml
src/mona_safety/include/mona_safety/: safety_node.hpp
src/mona_safety/launch/: safety_node.launch.py
src/mona_safety/src/: safety_node.cpp
src/mona_safety/test/: test_lifecycle_instantiation.cpp  test_safety_lifecycle.cpp  test_safety_logic.cpp
